--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     </style>
   <link rel="stylesheet" href="styles.css">
   <script src="javascript.js"></script>
+
+  <audio class="audio" autoplay><source src = "assets/video-sound/selection.mp3"></audio>
 </head>
     <body>
 
